--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     <canvas class="canvas">
       
-		  <script type="module" src="/jsfile/main.js"></script>
+		  <script type="module" src="jsfile/main.js"></script>
 		
     </canvas>
   
