--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       </div>
     <canvas class="canvas">
       
-		  <script type="module" src="jsfile/main.js"></script>
+		  <script type="module">
+  import * as THREE from 'https://cdn.skypack.dev/three@<version>';
+</script>
 		
     </canvas>
   
