--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
       </div>
     <canvas class="canvas">
       
-		  <script type="module">
-  import * as THREE from 'https://cdn.skypack.dev/three@<version>';
-</script>
+		 <script type="module" src="jsfile/main.js"></script> 
 		
     </canvas>
   
