--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>My first three.js app</title>
 		<link rel="stylesheet" href="style.css">
+		
 	</head>
   
 	<body>
@@ -19,7 +21,7 @@
       </div>
     <canvas class="canvas">
       
-		  <script type="module" src="/jsfile/main.js"></script>
+		  <script type="module" src="/main.js"></script>
 		
     </canvas>
   
