--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     <canvas class="canvas">
       
-		  <script type="module" src="/main.js"></script>
+		  <script type="module" src="main.js"></script>
 		
     </canvas>
   
