--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     <canvas class="canvas">
       
-		  <script type="module" src="jsbugatti/main.js"></script>
+		  <script type="module" src="/main.js"></script>
 		
     </canvas>
   
